--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     function show(e) {
         console.log(e);
     };
-    $('#myModal').on('hide.bs.modal', cons);
-    $('#myModal').on('show.bs.modal',show);
+    $('#myModal').on('hide.bs.modal', hide);
+    $('#myModal').on('show.bs.modal', show);
 </script>
 </body>
 </html>
