--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div id="fb-root"></div>
 <!-- Button trigger modal -->
-<a data-toggle="modal" data-target="#myModal" href="/modal.html" class="btn btn-primary btn-lg">Launch demo modal</a>
+<a data-toggle="modal" data-target="#myModal" href="WantToWatch/modal.html" class="btn btn-primary btn-lg">Launch demo modal</a>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
